--- a/photon/index.html
+++ b/photon/index.html
@@ -53,108 +53,62 @@
 			<section id="two" class="main style2">
 				<div class="container">
 					<div class="row 150%">
-						<div class="row">
-							<div class="12u$ 12u$(medium)">
-								<header class="major">
-									<h2>This is some available task I can do</h2>
-								</header>
-							</div>
+						<div class="12u$ 12u$(medium)">
+							<header class="major">
+								<h2>This is some available task<br />
+								 I can do</h2>
+							</header>
 						</div>
-
-						<div class="row">
-							<div class="3u 12u$(medium)">
-								<ul class="major-icons">
-									<li><span class="icon style1 major fa-newspaper-o"></span></li>
-								</ul>
-							</div>
-							<div class="9u 12u$(medium)">
-								<br><br><p style="font-size: 30px">I can search popular news from five news sources. The sources is CNN, Buzzfeed, IGN, BBC News, and The Verge.</p>
-							</div>
-						</div>
-
-						<div class="row">
-							<div class="9u 12u$(medium)">
-								<br><br><p style="font-size: 30px">I can look for weather forecast. You can see whether it will rain, or it will be sunny this day.</p>
-							</div>
-
-							<div class="3u 12u$(medium)">
-								<ul class="major-icons">
-									<li><span class="icon style2 major fa-sun-o"></span></li>
-								</ul>
-							</div>
-						</div>
-
-						<div class="row">
-							<div class="3u 12u$(medium)">
-								<ul class="major-icons">
-									<li><span class="icon style3 major fa-google"></span></li>
-								</ul>
-							</div>
-							<div class="9u 12u$(medium)">
-								<br><br><p style="font-size: 30px">Google is the best search engine. You can search anything you like from Google by asking me.</p>
-							</div>
-						</div>
-
-						<div class="row">
-							<div class="9u 12u$(medium)">
-								<br><br><p style="font-size: 30px">Do you need some motivation? I can give good quotes if you want. Hopefully it can motivate you.</p>
-							</div>
-							<div class="3u 12u$(medium)">
-								<ul class="major-icons">
-									<li><span class="icon style4 major fa-quote-right"></span></li>
-								</ul>
-							</div>
-						</div>
-
-						<div class="row">
-							<div class="3u 12u$(medium)">
-								<ul class="major-icons">
-									<li><span class="icon style5 major fa-dollar"></span></li>
-								</ul>
-							</div>
-							<div class="9u 12u$(medium)">
-								<br><br><p style="font-size: 30px">If you want to convert some currency I can do it for you.</p>
-							</div>
-						</div>
-
-						<div class="row">
-							<div class="9u 12u$(medium)">
-								<br><br><p style="font-size: 30px">URL too long? Just give me the URL and I'll give you back the short URL.</p>
-							</div>						
-							<div class="3u 12u$(medium)">
-								<ul class="major-icons">
-									<li><span class="icon style6 major fa-link"></span></li>
-								</ul>
-							</div>
-						</div>
-
-						<div class="row">
-						<div class="3u 12u$(medium)">
+						<div class="6u 12u$(medium)">
 							<ul class="major-icons">
+								<li><span class="icon style1 major fa-newspaper-o"></span></li>
+							</ul>
+						</div>
+						<div class="6u$ 12u$(medium)">
+							<p>I can search popular news from five news sources. The sources is CNN, Buzzfeed, IGN, BBC News, and The Verge.</p>
+						</div>
+
+						<div class="6u 12u$(medium)">
+							<ul class="major-icons">
+								<li><span class="icon style2 major fa-sun-o"></span></li>
+							</ul>
+						</div>
+						<div class="6u$ 12u$(medium)">
+							<p>I can search popular news from five news sources. The sources is CNN, Buzzfeed, IGN, BBC News, and The Verge.
+							</p>
+						</div>
+
+												<div class="6u 12u$(medium)">
+							<ul class="major-icons">
+								<li><span class="icon style1 major fa-newspaper-o"></span></li>
+							</ul>
+						</div>
+						<div class="6u$ 12u$(medium)">
+							<p>I can search popular news from five news sources. The sources is CNN, Buzzfeed, IGN, BBC News, and The Verge.</p>
+						</div>
+								<li><span class="icon style2 major fa-sun-o"></span></li>
+								<li><span class="icon style3 major fa-search"></span></li>
+								<li><span class="icon style4 major fa-quote-right"></span></li>
+								<li><span class="icon style5 major fa-dollar"></span></li>
+								<li><span class="icon style6 major fa-link"></span></li>
 								<li><span class="icon style1 major fa-book"></span></li>
-							</ul>
-						</div>
-						<div class="9u 12u$(medium)">
-							<br><br><p style="font-size: 30px">I can gain knowledge with all the chats I have gone through. So, just ask me something.</p>
-						</div>
-						</div>
-
-						<div class="row">
-						<div class="9u 12u$(medium)">
-							<br><br><p style="font-size: 30px">Some new feature will be delivered to you. Just wait for the next update!</p>
-						</div>
-						<div class="3u 12u$(medium)">
-							<ul class="major-icons">
-								<li><span class="icon style2 major fa-question"></span></li>
-							</ul>
-						</div>
-						</div>
-
+								<li><span class="icon style2 major fa-book"></span></li>
 
 <!--								<li><span class="icon style3 major fa-search"></span></li>
 								<li><span class="icon style4 major fa-quote-right"></span></li>
 								<li><span class="icon style5 major fa-dollar"></span></li>
 								<li><span class="icon style6 major fa-calendar"></span></li>-->
+
+							</ul>
+						</div>
+						<div class="6u$ 12u$(medium)">
+							<p>I can search popular news from five news sources. The sources is CNN, Buzzfeed, IGN, BBC News, and The Verge.
+							</p>
+							<p>I can look for weather forecast. You can see whether it will rain, or it will be sunny this day.</p>
+							<p>Google is the best search engine. You can search anything you like from Google by asking me.</p>
+							<p>Do you need some motivation? I can give good quotes if you want. Hopefully it can motivate you.</p>
+							<p>If you want to convert some currency
+						</div>
 					</div>
 				</div>
 			</section>
@@ -163,17 +117,32 @@
 			<section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
-						<h2>Curious about me?</h2>
+						<h2>Adipiscing amet consequat</h2>
 					</header>
-					<p>Just add me on LINE.</p>
+					<p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
 					<div class="row 150%">
 						<div class="4u 12u$(medium)">
-							<span class="image fit"><img src="" alt="" /></span>
+							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
+							<h3>Magna feugiat lorem</h3>
+							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<ul class="actions">
+								<li><a href="#" class="button">More</a></li>
+							</ul>
 						</div>
 						<div class="4u 12u$(medium)">
-							<span class="image fit"><a href="#"><img src="images/leptons.jpg" alt="" /></a></span>
+							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
+							<h3>Magna feugiat lorem</h3>
+							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">Add me</a></li>
+								<li><a href="#" class="button">More</a></li>
+							</ul>
+						</div>
+						<div class="4u$ 12u$(medium)">
+							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<h3>Magna feugiat lorem</h3>
+							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<ul class="actions">
+								<li><a href="#" class="button">More</a></li>
 							</ul>
 						</div>
 					</div>
@@ -181,10 +150,16 @@
 			</section>
 
 		<!-- Poster -->
-			<div class="12u"><span class="image fit"><img src="images/poster1.jpg" alt="" /></span></div>
+			<section class="main special">
+				<div class="box alt">
+					<div class="row uniform 50%">
+						<div class="12u"><span class="image fit"><img src="images/poster1.jpg" alt="" /></span></div>
+					</div>
+				</div>
+			</section>
 
 		<!-- Four -->
-<!--			<section id="four" class="main style2 special">
+			<section id="four" class="main style2 special">
 				<div class="container">
 					<header class="major">
 						<h2>Ipsum feugiat consequat?</h2>
@@ -195,7 +170,7 @@
 						<li><a href="#" class="button">Learn More</a></li>
 					</ul>
 				</div>
-			</section>-->
+			</section>
 
 		<!-- Five -->
 		<!--
@@ -518,7 +493,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		
 
 		<!-- Footer -->
-<!--			<section id="footer">
+			<section id="footer">
 				<ul class="icons">
 					<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
@@ -529,7 +504,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<ul class="copyright">
 					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
-			</section>-->
+			</section>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
