--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<section id="header">
 				<div class="inner">
 					<!--<span class="icon major fa-cloud"></span>-->
-					<img src="images/leptons-logo.png" style="width:100px; height:100px">
+					<img src="images/leptons-inverse.png" style="width:100px; height:100px; border-radius:50%">
 					<h1>Hi, I'm <strong>Leptons</strong>, specially crafted, handmade<br />
 					personal assistant just for you.</h1>
 					<!--<p>Accumsan feugiat mi commodo erat lorem ipsum, sed magna<br />
@@ -167,13 +167,20 @@
 					</header>
 					<p>Just add me on LINE.</p>
 					<div class="row 150%">
-						<div class="4u 12u$(medium)">
+						<div class="2u 12u$(medium)">
 							<span class="image fit"><img src="" alt="" /></span>
 						</div>
 						<div class="4u 12u$(medium)">
-							<span class="image fit"><a href="https://line.me/R/ti/p/%40xsg7357d"><img src="images/leptons.jpg" alt="" target="_blank"/></a></span>
+							<span class="image fit"><a href="https://line.me/R/ti/p/%40xsg7357d"><img src="images/leptons-test.jpg" alt="" target="_blank"/></a></span>
 							<ul class="actions">
 								<li><a href="https://line.me/R/ti/p/%40xsg7357d" class="button" target="_blank">Add me</a></li>
+							</ul>
+						</div>
+						<div class="4u 12u$(medium)">
+							<span class="image fit"><a href="mailto:quarks.group@gmail.com"><img src="images/quarks-logo.png" alt="" target="_blank"/></a></span>
+							<ul class="actions">
+								<p>or you can contact the developers
+								<li><a href="mailto:quarks.group@gmail.com" class="button" target="_blank">Contact</a></li>
 							</ul>
 						</div>
 					</div>
