--- a/index.html
+++ b/index.html
@@ -56,98 +56,145 @@
 						<div class="row">
 							<div class="12u$ 12u$(medium)">
 								<header class="major">
-									<h2>This is some available task I can do</h2>
+									<h2>This is some available tasks I can do</h2>
 								</header>
 							</div>
 						</div>
 
 						<div class="row">
 							<div class="3u 12u$(medium)">
-								<ul class="major-icons">
+<!--								<ul class="major-icons">
 									<li><span class="icon style1 major fa-newspaper-o"></span></li>
-								</ul>
+								</ul>-->
+								<img class="image fit" src="images/Screenshot/news.png">
 							</div>
 							<div class="9u 12u$(medium)">
-								<br><br><p style="font-size: 30px">I can search popular news from five news sources. The sources is CNN, Buzzfeed, IGN, BBC News, and The Verge.</p>
+								<br><br>
+								<header class="major align-right">
+									<h2>News</h2>
+								</header>
+								<p style="font-size: 25px; text-align:justify;">I can search popular news from five news sources. The sources is CNN, Buzzfeed, IGN, BBC News, and The Verge.
+								<br><br>The default command is "News" and I will ask you the news source. But you can ask me in a different way like "News from BBC" or "Give me CNN news"</p>
 							</div>
 						</div>
 
 						<div class="row">
 							<div class="9u 12u$(medium)">
-								<br><br><p style="font-size: 30px">I can look for weather forecast. You can see whether it will rain, or it will be sunny this day.</p>
+								<br><br><br>
+								<header class="major">
+									<h2>Weather</h2>
+								</header>
+								<p style="font-size: 25px; text-align:justify;">I can look for weather forecast. You can see whether it will rain, or it will be sunny this day.
+								<br><br>The command is "Weather" and I will ask you when the forecast is. You can specify the time directly like "Tomorrow's weather" or "Weather for today please"</p>
 							</div>
 
 							<div class="3u 12u$(medium)">
-								<ul class="major-icons">
+								<img class="image fit" src="images/Screenshot/weather.png">
+<!--								<ul class="major-icons">
 									<li><span class="icon style2 major fa-sun-o"></span></li>
-								</ul>
+								</ul>-->
 							</div>
 						</div>
 
 						<div class="row">
 							<div class="3u 12u$(medium)">
-								<ul class="major-icons">
+								<img class="image fit" src="images/Screenshot/google.png">
+<!--								<ul class="major-icons">
 									<li><span class="icon style3 major fa-google"></span></li>
-								</ul>
+								</ul>-->
 							</div>
 							<div class="9u 12u$(medium)">
-								<br><br><p style="font-size: 30px">Google is the best search engine. You can search anything you like from Google by asking me.</p>
+								<br><br>
+								<header class="major align-right">
+									<h2>Google Search</h2>
+								</header>
+								<p style="font-size: 25px; text-align:justify;">Google is the best search engine. You can search anything you like from Google by asking me.
+								<br><br>The command is "Search (something)", but you can ask me like "Find (something) in google" or "Google (something)"</p>
 							</div>
 						</div>
 
 						<div class="row">
 							<div class="9u 12u$(medium)">
-								<br><br><p style="font-size: 30px">Do you need some motivation? I can give good quotes if you want. Hopefully it can motivate you.</p>
+								<br><br>
+								<header class="major">
+									<h2>Quotes</h2>
+								</header>
+								<p style="font-size: 25px; text-align:justify;">Do you need some motivation? I can give good quotes if you want. Hopefully the quote is good and can motivate you.
+								<br><br>The command is "Quotes" or you can ask me directly.</p>
 							</div>
 							<div class="3u 12u$(medium)">
-								<ul class="major-icons">
+								<img class="image fit" src="images/Screenshot/quotes.png">
+<!--								<ul class="major-icons">
 									<li><span class="icon style4 major fa-quote-right"></span></li>
-								</ul>
+								</ul>-->
 							</div>
 						</div>
 
 						<div class="row">
 							<div class="3u 12u$(medium)">
-								<ul class="major-icons">
+								<img class="image fit" src="images/Screenshot/currency-converter.png">
+<!--								<ul class="major-icons">
 									<li><span class="icon style5 major fa-dollar"></span></li>
-								</ul>
+								</ul>-->
 							</div>
 							<div class="9u 12u$(medium)">
-								<br><br><p style="font-size: 30px">If you want to convert some currency I can do it for you.</p>
+								<br><br>
+								<header class="major align-right">
+									<h2>Currency Converter</h2>
+								</header>
+								<p style="font-size: 25px; text-align:justify;">If you want to convert some currency I can do it for you.
+								<br><br>The default format is "How much is (some currency value) in (some currency)". If you are not clear enough I will ask you until I can get the value.</p>
 							</div>
 						</div>
 
 						<div class="row">
 							<div class="9u 12u$(medium)">
-								<br><br><p style="font-size: 30px">URL too long? Just give me the URL and I'll give you back the short URL.</p>
+								<br><br><br>
+								<header class="major">
+									<h2>URL Shortener</h2>
+								</header>
+								<p style="font-size: 25px"; text-align:justify;>URL too long? Just give me the URL and I'll give you back the short URL.
+								<br><br>The command is "Shorten (Some long url)"</p>
 							</div>						
 							<div class="3u 12u$(medium)">
-								<ul class="major-icons">
+								<img class="image fit" src="images/Screenshot/shorten-url.png">
+<!--								<ul class="major-icons">
 									<li><span class="icon style6 major fa-link"></span></li>
-								</ul>
+								</ul>-->
 							</div>
 						</div>
 
 						<div class="row">
-						<div class="3u 12u$(medium)">
-							<ul class="major-icons">
-								<li><span class="icon style1 major fa-book"></span></li>
-							</ul>
-						</div>
-						<div class="9u 12u$(medium)">
-							<br><br><p style="font-size: 30px">I can gain knowledge with all the chats I have gone through. So, just ask me something.</p>
-						</div>
+							<div class="3u 12u$(medium)">
+								<img class="image fit" src="images/Screenshot/knowledge.png">
+	<!--							<ul class="major-icons">
+									<li><span class="icon style1 major fa-book"></span></li>
+								</ul>-->
+							</div>
+							<div class="9u 12u$(medium)">
+								<br><br>
+								<header class="major align-right">
+									<h2>Knowledge</h2>
+								</header>
+								<p style="font-size: 25px"; text-align:justify;>I can search anything in the internet and give you the definition. So, just ask me something and I will give you the definition.
+								<br><br>The command is just ask me like "What is (something)?" or "Who is (someone)?"</p>
+							</div>
 						</div>
 
 						<div class="row">
-						<div class="9u 12u$(medium)">
-							<br><br><p style="font-size: 30px">Some new feature will be delivered to you. Just wait for the next update!</p>
-						</div>
-						<div class="3u 12u$(medium)">
-							<ul class="major-icons">
-								<li><span class="icon style2 major fa-question"></span></li>
-							</ul>
-						</div>
+							<div class="9u 12u$(medium)">
+								<br><br><br>
+								<header class="major">
+									<h2>Small Talk</h2>
+								</header>
+								<p style="font-size: 25px"; text-align:justify;>Some new feature will be delivered to you. Just wait for the next update! And as you wait, have a nice small talk with me.</p>
+							</div>
+							<div class="3u 12u$(medium)">
+								<img class="image fit" src="images/Screenshot/small-talk.png">
+	<!--							<ul class="major-icons">
+									<li><span class="icon style2 major fa-question"></span></li>
+								</ul>-->
+							</div>
 						</div>
 
 
