--- a/index.html
+++ b/index.html
@@ -185,18 +185,34 @@
 							<div class="9u 12u$(medium)">
 								<br><br><br>
 								<header class="major">
-									<h2>Small Talk</h2>
+									<h2>Places</h2>
 								</header>
-								<p style="font-size: 25px"; text-align:justify;>Some new feature will be delivered to you. Just wait for the next update! And as you wait, have a nice small talk with me.</p>
+								<p style="font-size: 25px"; text-align:justify;>Don't know where to go? I can give you advice about cool places in town.
+								<br><br>The command is "cool places" or "cool places in (town name)</p>
 							</div>
 							<div class="3u 12u$(medium)">
-								<img class="image fit" src="images/Screenshot/small-talk.png">
+								<img class="image fit" src="images/Screenshot/places.png">
 	<!--							<ul class="major-icons">
 									<li><span class="icon style2 major fa-question"></span></li>
 								</ul>-->
 							</div>
 						</div>
 
+						<div class="row">
+							<div class="3u 12u$(medium)">
+								<img class="image fit" src="images/Screenshot/knowledge.png">
+	<!--							<ul class="major-icons">
+									<li><span class="icon style1 major fa-book"></span></li>
+								</ul>-->
+							</div>
+							<div class="9u 12u$(medium)">
+								<br><br>
+								<header class="major align-right">
+									<h2>Small Talk</h2>
+								</header>
+								<p style="font-size: 25px"; text-align:justify;>Some new feature will be delivered to you. Just wait for the next update! And as you wait, have a nice small talk with me.</p>
+							</div>
+						</div>
 
 <!--								<li><span class="icon style3 major fa-search"></span></li>
 								<li><span class="icon style4 major fa-quote-right"></span></li>
@@ -218,9 +234,9 @@
 							<span class="image fit"><img src="" alt="" /></span>
 						</div>
 						<div class="4u 12u$(medium)">
-							<span class="image fit"><a href="https://line.me/R/ti/p/%40xsg7357d"><img src="images/leptons-test.jpg" alt="" target="_blank"/></a></span>
+							<span class="image fit"><a href="https://line.me/R/ti/p/%40iep4448p"><img src="images/leptons-test.jpg" alt="" target="_blank"/></a></span>
 							<ul class="actions">
-								<li><a href="https://line.me/R/ti/p/%40xsg7357d" class="button" target="_blank">Add me</a></li>
+								<li><a href="https://line.me/R/ti/p/%40iep4448p" class="button" target="_blank">Add me</a></li>
 							</ul>
 						</div>
 						<div class="4u 12u$(medium)">
@@ -235,7 +251,7 @@
 			</section>
 
 		<!-- Poster -->
-			<div class="12u"><span class="image fit"><img src="images/poster1.jpg" alt="" /></span></div>
+			<div class="12u"><span class="image fit"><img src="images/poster-2-v3.jpg" alt="" /></span></div>
 
 
 		<!-- Scripts -->
