--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 						<div class="row">
 							<div class="3u 12u$(medium)">
-								<img class="image fit" src="images/Screenshot/google.png">
+								<img class="image fit" src="images/Screenshot/search.png">
 <!--								<ul class="major-icons">
 									<li><span class="icon style3 major fa-google"></span></li>
 								</ul>-->
@@ -108,8 +108,8 @@
 								<header class="major align-right">
 									<h2>Google Search</h2>
 								</header>
-								<p style="font-size: 25px; text-align:justify;">Google is the best search engine. You can search anything you like from Google by asking me.
-								<br><br>The command is "Search (something)", but you can ask me like "Find (something) in google" or "Google (something)"</p>
+								<p style="font-size: 25px; text-align:justify;">you can search anything you like from internet by asking me. Google and Bing is my friend!
+								<br><br>The command is "Search (something)", but you can ask me like "Find (something) in google/bing" or "Google/bing (something)"</p>
 							</div>
 						</div>
 
@@ -176,7 +176,7 @@
 								<header class="major align-right">
 									<h2>Knowledge</h2>
 								</header>
-								<p style="font-size: 25px"; text-align:justify;>I can search anything in the internet and give you the definition. So, just ask me something and I will give you the definition.
+								<p style="font-size: 25px"; text-align:justify;>I can search anything on the internet and give you the definition. So, just ask me something and I will give you the definition.
 								<br><br>The command is just ask me like "What is (something)?" or "Who is (someone)?"</p>
 							</div>
 						</div>
