--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 								<header class="major">
 									<h2>Quotes</h2>
 								</header>
-								<p style="font-size: 25px; text-align:justify;">Do you need some motivation? I can give good quotes if you want. Hopefully the quote is good and can motivate you.
-								<br><br>The command is "Quotes" or you can ask me directly.</p>
+								<p style="font-size: 25px; text-align:justify;">Do you need some motivation or inspiration? I can give good quotes if you want. I have 4 categories: motivation, inspiration, life, and love. Hopefully the quote is good and can makes your day.
+								<br><br>The command is "(category) quotes" or you can ask me directly.</p>
 							</div>
 							<div class="3u 12u$(medium)">
 								<img class="image fit" src="images/Screenshot/quotes.png">
